Bug 291124 - When double clicking a word that precedes a space, words selects both
Summary: When double clicking a word that precedes a space, words selects both
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5 or before
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 07:03 UTC by Kubuntiac
Modified: 2012-01-13 13:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntiac 2012-01-10 07:03:03 UTC
Version:           1.5 or before
OS:                Linux

If I double click a word, Words selects the word... *and* the space after it. If there is a comma, semicolon or similar after the word, it acts as I expect (and *doesn't* select it)

Reproducible: Always

Steps to Reproduce:
Double click a word that preceeds a space

Actual Results:  
the space after the word is selected

Expected Results:  
only the word is slected

OS: Linux (x86_64) release 3.1-CHAKRA
Compiler: gcc

QT 4.8, Calligra v2.3.85-517-gb9cd4d8
Comment 1 Camilla Boemann 2012-01-13 10:06:30 UTC
Git commit a7a75f0056abf59cbce27957ab7fb0b6e64e2cb2 by C. Boemann.
Committed on 12/01/2012 at 22:13.
Pushed by boemann into branch 'master'.

Implement tripleclicking
To do so I had to reroute doubleclicking into toolproxy mousepress

However for applications there are no change, except tools can now
reimplement mouseTripleClickEvent to be notified of a triple click

4 or more clicks are interpreted as (repeated) tripleclick. That
is until the doubleclicktimeout period has elapsed since the first
click.

The behaviour is smooth and as expected. I've also change texttool
take advantage of it and actiually select the paragraph on third
click and not as before where doubliclcking alternated between
selecting word and line

This patch also fixes a bug where doublclickig a word selects the
space after (it's a matter of taste and windows always selects the
space. but it seems most people like to only select the word.

M  +5    -0    libs/flake/KoToolBase.cpp
M  +8    -0    libs/flake/KoToolBase.h
M  +45   -40   libs/flake/KoToolProxy.cpp
M  +6    -0    libs/flake/KoToolProxy_p.h
M  +27   -16   plugins/textshape/TextTool.cpp
M  +3    -1    plugins/textshape/TextTool.h

http://commits.kde.org/calligra/a7a75f0056abf59cbce27957ab7fb0b6e64e2cb2
Comment 2 Kubuntiac 2012-01-13 13:37:13 UTC
Awesome. Thanks!

I can see that for moving text having the space would be a good thing. For formatting involving underlining or hilighting though it was a real pain, and I know I was doing these far more often.

This is a definitely an improvement in my books.

Thanks!