libs/flake/KoToolBase.cpp
@@ -84,6 +84,11 @@ void KoToolBase::mouseDoubleClickEvent(KoPointerEvent *event)
     event->ignore();
 }
 
+void KoToolBase::mouseTripleClickEvent(KoPointerEvent *event)
+{
+    event->ignore();
+}
+
 void KoToolBase::keyPressEvent(QKeyEvent *e)
 {
     e->ignore();
